--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -2053,8 +2053,6 @@ then {11,99 TRY/Month}*/
 "subscription_offer_cancel_button" = "გაუქმება";
 "paycell_share_message " = "შენ გაქვს 5GB lifebox მეხსიერება, დააჭირე რომ გამოისყიდო";
 "ksaldalks" = "-";
-"free_up_space_title" = "მეხსიერება არაა საკმარისი";
-"notification_menu_item" = "შეტყობინებები";
 
 /*Fuzzy*/
 "free_up_space_title" = "მეხსიერება არაა საკმარისი";
@@ -2065,3 +2063,38 @@ then {11,99 TRY/Month}*/
 "notification_buttom_sheet_only_unread" = "\nnotification_buttom_sheet_only_unread";
 "notification_buttom_sheet_show_alerts" = "notification_buttom_sheet_show_alerts";
 "notifications_no_notification" = "notifications_no_notification";
+"Create_Word" = "Create_Word";
+"Create_Cell" = "\nCreate_Cell";
+"Create_Slide" = "შექმენი სლაიდი";
+"Create_Document_Popup" = "Create_Document_Popup";
+"Create_Document_Create_Button" = "Create_Document_Create_Button";
+"Create_Document_Cancel_Button" = "Create_Document_Cancel_Button";
+"Office_Filter_Document" = "Office_Filter_Document";
+"Office_Filter_SpreedSheet" = "Office_Filter_SpreedSheet";
+"Office_Filter_Presentation" = "Office_Filter_Presentation";
+"Office_Filter_All" = "Office_Filter_All";
+"Office_Filter_PDF" = "Office_Filter_PDF";
+
+/*Fotoğraf Seçin*/
+"create_collage_select_photo" = "";
+
+/*+New Collage*/
+"create_collage_preview_main" = "";
+
+/*2'li Kolajlar*/
+"create_collage_dual" = "";
+"create_collage_triple" = "";
+"create_collage_quad" = "";
+"create_collage_multiple" = "";
+"create_collage_all" = "";
+"create_collage_select_collage" = "";
+"create_collage_info_label" = "";
+
+/*Fotoğraf Seçin*/
+"create_collage_select_photo" = "";
+
+/*+New Collage*/
+"create_collage_preview_main" = "";
+
+/*2'li Kolajlar*/
+"create_collage_dual" = "";
