--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2069,15 +2069,48 @@ then {11,99 TRY/Month}*/
 "subscription_offer_cancel_button" = "Отмена";
 "paycell_share_message " = "";
 "ksaldalks" = "";
-"free_up_space_title" = "Место на устройстве почти заполнено!";
-"notification_menu_item" = "Уведомления";
 
 /*Fuzzy*/
 "free_up_space_title" = "Место на устройстве почти заполнено!";
 
 /*Fuzzy*/
 "notification_menu_item" = "Уведомления";
-"notification_buttom_sheet_select_mode" = "";
-"notification_buttom_sheet_only_unread" = "";
-"notification_buttom_sheet_show_alerts" = "";
-"notifications_no_notification" = "";
+"notification_buttom_sheet_select_mode" = "Выбрать";
+"notification_buttom_sheet_only_unread" = "Только непрочитанные";
+"notification_buttom_sheet_show_alerts" = "Показывать только оповещения";
+"notifications_no_notification" = "У вас нет уведомлений";
+"Create_Word" = "";
+"Create_Cell" = "";
+"Create_Slide" = "";
+"Create_Document_Popup" = "";
+"Create_Document_Create_Button" = "";
+"Create_Document_Cancel_Button" = "";
+"Office_Filter_Document" = "";
+"Office_Filter_SpreedSheet" = "";
+"Office_Filter_Presentation" = "";
+"Office_Filter_All" = "";
+"Office_Filter_PDF" = "";
+
+/*Fotoğraf Seçin*/
+"create_collage_select_photo" = "";
+
+/*+New Collage*/
+"create_collage_preview_main" = "";
+
+/*2'li Kolajlar*/
+"create_collage_dual" = "";
+"create_collage_triple" = "";
+"create_collage_quad" = "";
+"create_collage_multiple" = "";
+"create_collage_all" = "";
+"create_collage_select_collage" = "";
+"create_collage_info_label" = "";
+
+/*Fotoğraf Seçin*/
+"create_collage_select_photo" = "";
+
+/*+New Collage*/
+"create_collage_preview_main" = "";
+
+/*2'li Kolajlar*/
+"create_collage_dual" = "";
