--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2057,15 +2057,48 @@ then {11,99 TRY/Month}*/
 "subscription_offer_cancel_button" = "Скасувати";
 "paycell_share_message " = "";
 "ksaldalks" = "";
-"free_up_space_title" = "Місце на пристрої майже заповнене!";
-"notification_menu_item" = "Сповіщення";
 
 /*Fuzzy*/
 "free_up_space_title" = "Місце на пристрої майже заповнене!";
 
 /*Fuzzy*/
 "notification_menu_item" = "Сповіщення";
-"notification_buttom_sheet_select_mode" = "";
-"notification_buttom_sheet_only_unread" = "";
-"notification_buttom_sheet_show_alerts" = "";
-"notifications_no_notification" = "";
+"notification_buttom_sheet_select_mode" = "Виберіть";
+"notification_buttom_sheet_only_unread" = "Тільки непрочитані";
+"notification_buttom_sheet_show_alerts" = "Показувати лише оповіщення";
+"notifications_no_notification" = "У вас немає нових повідомлень";
+"Create_Word" = "";
+"Create_Cell" = "";
+"Create_Slide" = "";
+"Create_Document_Popup" = "";
+"Create_Document_Create_Button" = "";
+"Create_Document_Cancel_Button" = "";
+"Office_Filter_Document" = "";
+"Office_Filter_SpreedSheet" = "";
+"Office_Filter_Presentation" = "";
+"Office_Filter_All" = "";
+"Office_Filter_PDF" = "";
+
+/*Fotoğraf Seçin*/
+"create_collage_select_photo" = "";
+
+/*+New Collage*/
+"create_collage_preview_main" = "";
+
+/*2'li Kolajlar*/
+"create_collage_dual" = "";
+"create_collage_triple" = "";
+"create_collage_quad" = "";
+"create_collage_multiple" = "";
+"create_collage_all" = "";
+"create_collage_select_collage" = "";
+"create_collage_info_label" = "";
+
+/*Fotoğraf Seçin*/
+"create_collage_select_photo" = "";
+
+/*+New Collage*/
+"create_collage_preview_main" = "";
+
+/*2'li Kolajlar*/
+"create_collage_dual" = "";
