--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2079,8 +2079,6 @@ then {11,99 TRY/Month}*/
 "subscription_offer_cancel_button" = "İptal Et";
 "paycell_share_message " = "";
 "ksaldalks" = "";
-"free_up_space_title" = "Alanın dolmak üzere!";
-"notification_menu_item" = "Bildirimler";
 
 /*Fuzzy*/
 "free_up_space_title" = "Alanın dolmak üzere!";
@@ -2091,3 +2089,48 @@ then {11,99 TRY/Month}*/
 "notification_buttom_sheet_only_unread" = "Sadece okunmamışlar";
 "notification_buttom_sheet_show_alerts" = "Sadece uyarıları göster";
 "notifications_no_notification" = "Henüz bildirimin yok";
+"Create_Word" = "Word Oluştur";
+"Create_Cell" = "Çalışma Tablosu Oluştur";
+"Create_Slide" = "Sunum Oluştur";
+"Create_Document_Popup" = "Doküman Oluştur";
+
+/*Fuzzy*/
+"Create_Document_Create_Button" = "Oluştur";
+"Create_Document_Cancel_Button" = "Vazgeç";
+
+/*Fuzzy*/
+"Office_Filter_Document" = "Doküman";
+
+/*Fuzzy*/
+"Office_Filter_SpreedSheet" = "Çalışma Tablosu";
+
+/*Fuzzy*/
+"Office_Filter_Presentation" = "Sunum";
+
+/*Fuzzy*/
+"Office_Filter_All" = "Tümü";
+"Office_Filter_PDF" = "Pdf";
+
+/*Fotoğraf Seçin*/
+"create_collage_select_photo" = "Fotoğraf Seçin";
+
+/*+New Collage*/
+"create_collage_preview_main" = "+Yeni Kolaj";
+
+/*2'li Kolajlar*/
+"create_collage_dual" = "2'li Kolajlar";
+"create_collage_triple" = "3'lü Kolajlar";
+"create_collage_quad" = "4'lü Kolajlar";
+"create_collage_multiple" = "Çoklu Kolajlar";
+"create_collage_all" = "Tüm Kolajlar";
+"create_collage_select_collage" = "Kolaj Seçin";
+"create_collage_info_label" = "Düzenlemek için herhangi bir fotoğrafa dokunun";
+
+/*Fotoğraf Seçin*/
+"create_collage_select_photo" = "";
+
+/*+New Collage*/
+"create_collage_preview_main" = "";
+
+/*2'li Kolajlar*/
+"create_collage_dual" = "";
