--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1411,7 +1411,7 @@
 "delete_dublicate_package_description" = "+ Șterge Contactele Repetate Din Agenda Telefonică";
 "premium_user_package_description" = "+ Analiză Nelimitată PhotoPick";
 "bundle_package_addon_type" = "Spațiu de Stocare + Premium";
-"storage_only_package_addon_type" = "Numai Spațiu de Stocare";
+"storage_only_package_addon_type" = "Spațiu de stocare";
 "settings_userinfo_name_surname" = "Prenume Nume";
 "settings_userinfo_email" = "E-mail";
 "settings_userinfo_phone" = "Numărul de Telefon";
@@ -2090,4 +2090,4 @@ then {11,99 TRY/Month}*/
 
 /*2'li Kolajlar*/
 "create_collage_dual" = "";
-"create_collage" = "";
+"create_collage" = "Creați Colaj";
