Localize file added

--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1427,19 +1427,19 @@
 "settings_userinfo_phone" = "Telefon Numarası";
 "settings_action_sheet_profile_details" = "Profil detayları";
 "settings_action_sheet_edit_profile_photo" = "Profil fotoğrafını güncelle";
-"original_сopy_package_description" = "+ Orjinal Kalitede Saklama";
+"original_сopy_package_description" = "+ Orijinal Kalitede Saklama";
 "become_premium_navbar_title" = "Sana Özel Teklifimiz!";
 "become_premium_header_default_title" = "Sana özel bir teklifimiz var!";
-"become_premium_header_default_subtitle" = "Anılarını orjinal kalitede yedeklemer ister misin? Belki de fotoğraflarını ve rehberini organize etmek için yardıma ihtiyacın var. Premium abone ol, lifebox hayatını kolaylaştırsın. Premium özellikleri ve sana özel tekliflerimizi incele.";
+"become_premium_header_default_subtitle" = "Anılarını orijinal kalitede yedeklemek ister misin? Belki de fotoğraflarını ve rehberini organize etmek için yardıma ihtiyacın var. Premium abone ol, lifebox hayatını kolaylaştırsın. Premium özellikleri ve sana özel tekliflerimizi incele.";
 "become_premium_header_people_title" = "Sana özel bir teklifimiz var!";
-"become_premium_header_people_subtitle" = "Anılarını orjinal kalitede yedeklemer ister misin? Belki de fotoğraflarını ve rehberini organize etmek için yardıma ihtiyacın var. Premium abone ol, lifebox hayatını kolaylaştırsın. Premium özellikleri ve sana özel tekliflerimizi incele.";
+"become_premium_header_people_subtitle" = "Anılarını orijinal kalitede yedeklemek ister misin? Belki de fotoğraflarını ve rehberini organize etmek için yardıma ihtiyacın var. Premium abone ol, lifebox hayatını kolaylaştırsın. Premium özellikleri ve sana özel tekliflerimizi incele.";
 "become_premium_header_places_title" = "Sana özel bir teklifimiz var!";
-"become_premium_header_places_subtitle" = "Anılarını orjinal kalitede yedeklemer ister misin? Belki de fotoğraflarını ve rehberini organize etmek için yardıma ihtiyacın var. Premium abone ol, lifebox hayatını kolaylaştırsın. Premium özellikleri ve sana özel tekliflerimizi incele.";
+"become_premium_header_places_subtitle" = "Anılarını orijinal kalitede yedeklemek ister misin? Belki de fotoğraflarını ve rehberini organize etmek için yardıma ihtiyacın var. Premium abone ol, lifebox hayatını kolaylaştırsın. Premium özellikleri ve sana özel tekliflerimizi incele.";
 "become_premium_header_things_title" = "Sana özel bir teklifimiz var!";
-"become_premium_header_things_subtitle" = "Anılarını orjinal kalitede yedeklemer ister misin? Belki de fotoğraflarını ve rehberini organize etmek için yardıma ihtiyacın var. Premium abone ol, lifebox hayatını kolaylaştırsın. Premium özellikleri ve sana özel tekliflerimizi incele.";
+"become_premium_header_things_subtitle" = "Anılarını orijinal kalitede yedeklemek ister misin? Belki de fotoğraflarını ve rehberini organize etmek için yardıma ihtiyacın var. Premium abone ol, lifebox hayatını kolaylaştırsın. Premium özellikleri ve sana özel tekliflerimizi incele.";
 "become_premium_header_contact_sync_title" = "Sana özel bir teklifimiz var!";
-"become_premium_header_contact_sync_subtitle" = "Anılarını orjinal kalitede yedeklemer ister misin? Belki de fotoğraflarını ve rehberini organize etmek için yardıma ihtiyacın var. Premium abone ol, lifebox hayatını kolaylaştırsın. Premium özellikleri ve sana özel tekliflerimizi incele.";
-"become_premium_description" = "Orjinal Kalitede Saklama\nSınırsız Yüz&Nesne&Yer Tanıma\nTelefondaki Tekrarlayan Kontakları Silme\nSınırsız PhotoPick Analiz";
+"become_premium_header_contact_sync_subtitle" = "Anılarını orijinal kalitede yedeklemek ister misin? Belki de fotoğraflarını ve rehberini organize etmek için yardıma ihtiyacın var. Premium abone ol, lifebox hayatını kolaylaştırsın. Premium özellikleri ve sana özel tekliflerimizi incele.";
+"become_premium_description" = "Orijinal Kalitede Saklama\nSınırsız Yüz&Nesne&Yer Tanıma\nTelefondaki Tekrarlayan Kontakları Silme\nSınırsız PhotoPick Analiz";
 "become_premium_or_text" = "VEYA ek saklama alanı alarak Premium üyeliğe ÜCRETSİZ sahip ol!";
 "become_premium_see_all_packages" = "Tüm Abonelikleri İncele";
 "dialog_header_contact_sync_vcf_file_upload_error" = "lifebox saklama alanı limitine ulaştın!";
