--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1423,7 +1423,7 @@
 "delete_dublicate_package_description" = "+ لاتمسح جهات الاتصال المتكررة والمتواجدة بهاتفك";
 "premium_user_package_description" = "+ تحليل الصور فوتو بيك الغير محدود";
 "bundle_package_addon_type" = "مساحة التخزين+بريميوم";
-"storage_only_package_addon_type" = "مساحة التخزين فقط";
+"storage_only_package_addon_type" = "مساحة التخزين";
 "settings_userinfo_name_surname" = "الاسم اللقب";
 "settings_userinfo_email" = "البريد الإلكتروني";
 "settings_userinfo_phone" = "رقم الهاتف";
@@ -2039,7 +2039,9 @@ then {11,99 TRY/Month}*/
 "title_paycell_subtitle" = "رصيد Paycell";
 "title_paycell_friends" = "الأشخاص الذين اشتروا الحزمة ( %d من الأشخاص)";
 "paycell_share_message" = "انضممت إلى برنامج سفير العلامة التجارية lifebox. يمكنك الحصول على حزمة lifebox الخاصة بالبرنامج لمدة 6 أشهر 250 جيجابايت Premium بسعر مخفض بالنقر فوق الرابط أدناه. لا تفوت الفرصة 😊";
-"beeline_cancel_TC" = "يمكنك إلغاء أو إدارة اشتراكك في lifebox من Beeline التطبيق.";
+
+/*Fuzzy*/
+"beeline_cancel_TC" = "يمكنك إلغاء أو إدارة اشتراكك في lifebox من Cellfie التطبيق.";
 "foryou_throwback" = "ذكريات";
 "foryou_myalbums" = "ألبوماتي";
 "foryou_myanimations" = "الرسوم المتحركة الخاصة بي";
@@ -2102,4 +2104,4 @@ then {11,99 TRY/Month}*/
 
 /*2'li Kolajlar*/
 "create_collage_dual" = "";
-"create_collage" = "";
+"create_collage" = "قم بإنشاء مجمعة";
