--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2127,3 +2127,4 @@ then {11,99 TRY/Month}*/
 /*2'li Kolajlar*/
 "create_collage_dual" = "2'li Kolajlar";
 "create_collage" = "Kolaj oluştur";
+"collage_create_info" = "Kolaj oluşturmak için artıya tıklayınız";
